--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -102,3 +103,6 @@ sftp-config.json
 
 # Notepad++ backups #
 *.bak
+
+# Node.js
+node_modules/
