--- a/en_ID/config.json
+++ b/en_ID/config.json
@@ -1,7 +1,7 @@
 {
-  "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+  "additionalFooterText": "All content and images &copy; by Kulkul.tech &nbsp;",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
-  "title": "Your wiki name",
+  "title": "Kulkul.tech - Open-source",
   "useSideMenu": true
 }
